common interactor completed
